# chemcore

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  package-lock.json  package.json
apps/chemcore-office/: Cargo.toml
apps/chemcore-office/src/: main.rs  windows_office.rs
apps/chemcore-office/src/windows_office/: emf_preview.rs
apps/chemcore-office/src/windows_office/emf_preview/: renderer.rs
apps/chemcore-office/src/windows_office/emf_preview/renderer/: renderer_env.rs
docs/: abbreviation-recognition-rules.zh-CN.md  agent-poc-workflow.md  agent-poc-workflow.zh-CN.md  architecture.md  architecture.zh-CN.md  bond-rendering-rules.zh-CN.md  charge-radical-symbol-rules.zh-CN.md  chemcore-cli-guide.md  chemcore-cli-guide.zh-CN.md  chemdraw-focus-audit-2026-06-02.zh-CN.md  developer-log-2026-04-23.en.md  developer-log-2026-04-23.zh-CN.md  developer-log-2026-04-24.en.md  developer-log-2026-04-24.zh-CN.md  developer-log-2026-04-25.en.md  developer-log-2026-04-25.zh-CN.md  developer-log-2026-04-26.en.md  developer-log-2026-04-26.zh-CN.md  developer-log-2026-04-28.en.md  developer-log-2026-04-28.zh-CN.md  developer-log-2026-05-02.en.md  developer-log-2026-05-02.zh-CN.md  developer-log-2026-05-05.en.md  developer-log-2026-05-05.zh-CN.md  developer-log-2026-05-07.en.md  developer-log-2026-05-07.zh-CN.md  document-commit-contract.zh-CN.md  editor-command-history.md  emf-text-investigation.zh-CN.md  format-v0.1.md  format-v0.1.zh-CN.md  glyph-clip-polygons.zh-CN.md  (+16 more)
(+281 files in other folders)
