[package]
name = "chemcore-office"
version = "0.1.0"
description = "Chemcore Windows Office/OLE integration server"
authors = ["Jiajun Zhang"]
license = "ISC"
edition.workspace = true

[dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Ole",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging",
] }
